rmk-macro/tests/compile_fail/processor_invalid_subscribe_element.rs
use rmk_macro::processor;

pub struct KeyboardEvent;

#[processor(subscribe = [KeyboardEvent, 123])]
pub struct BadProcessor;

#[processor(subscribe = [KeyboardEvent], poll_interval = "fast")]
pub struct BadPollInterval;

fn main() {}
