rmk-macro/tests/compile_fail/processor_invalid_subscribe_element.stderr
error: invalid `subscribe` element: expected a type path
 --> tests/compile_fail/processor_invalid_subscribe_element.rs:5:41
  |
5 | #[processor(subscribe = [KeyboardEvent, 123])]
  |                                         ^^^

error: `poll_interval` must be an integer literal
 --> tests/compile_fail/processor_invalid_subscribe_element.rs:8:58
  |
8 | #[processor(subscribe = [KeyboardEvent], poll_interval = "fast")]
  |                                                          ^^^^^^
